<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup2"
    tools:context=".signupActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text ="@string/sign_up"
                android:textSize="48sp"
                android:textStyle="bold"
                android:textColor="@color/bluish_black"/>

            // first name
            <EditText

                android:id="@+id/first_name_editText"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:ems="10"
                android:textColor="@color/white"

                android:padding="10dp"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/white"
                android:autofillHints=""
                android:layout_marginStart="20dp" />




// middle name
            <EditText
                android:id="@+id/middle_name_editText"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:ems="10"

                android:padding="10dp"
                android:hint="@string/middle_name"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:textColorHint="@color/white"
                android:layout_marginStart="20dp"
                android:importantForAutofill="no" />



            // last name
            <EditText
                android:id="@+id/last_name_editText"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/last_name"

                android:padding="10dp"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:textColorHint="@color/white"
                android:layout_marginStart="20dp"
                android:importantForAutofill="no" />



            // email
            <EditText
                android:id="@+id/emailID_editText"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:ems="10"

                android:padding="10dp"
                android:hint="@string/enter_your_email_id"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"

                android:layout_marginStart="20dp"
                android:importantForAutofill="no" />



            // phone number
            <EditText
                android:id="@+id/mobile_editText"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/custom_input"
                android:layout_marginBottom="5dp"
                android:drawablePadding="12dp"
                android:ems="10"

                android:padding="10dp"
                android:textColor="@color/white"

                android:hint="@string/your_phone_number"
                android:inputType="numberDecimal"
                android:textColorHint="@color/white"

                android:layout_marginStart="20dp"
                android:importantForAutofill="no" />


            // age

            <EditText
                android:id="@+id/age_editText"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:ems="10"
               android:hint="@string/your_age"
                android:padding="10dp"
                android:textColor="@color/white"
                android:inputType="numberDecimal"
                android:textColorHint="@color/white"
                android:layout_marginStart="20dp"
                android:autofillHints="" />



            // gender

            <EditText
                android:id="@+id/gender_editText"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/custom_input"
                android:layout_marginBottom="5dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/gender"
                android:padding="10dp"
                android:textColor="@color/white"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:layout_marginStart="20dp"
                android:autofillHints="" />



// password

            <EditText
                android:id="@+id/password1_editText"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/custom_input"
                android:layout_marginBottom="5dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_custom_lock"
                android:padding="10dp"
                android:textColor="@color/white"
                android:inputType="textPassword"

                android:textColorHint="@color/white"
                android:drawableStart="@drawable/ic_custom_lock"
                android:autofillHints=""
                android:layout_marginStart="20dp" />


            // confirm password


            <EditText
                android:id="@+id/password2_editText"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_custom_lock"
                android:drawableLeft="@drawable/ic_custom_lock"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/confirm_password"

                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/sign_button"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/bluish_black"
                android:background="@drawable/custom_main"
                android:onClick="signin"
                android:text="@string/sign_up"


                tools:ignore="OnClick" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="50dp"
                android:onClick="log_In"

                android:text="@string/already_have_an_account_log_in"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </LinearLayout>


    </RelativeLayout>

</ScrollView>